--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -42,7 +42,8 @@ commons-pool.version=1.5.4
 derby.version=10.4.2.0
 guava-hadoop20.version=r09
 guava-hadoop23.version=11.0.2
-hbase.version=0.92.0
+hbase.version=0.92.2
+hbase-test.version=0.92.2
 jackson.version=1.8.8
 javaewah.version=0.3.2
 jdo-api.version=2.3-ec
@@ -60,4 +61,4 @@ rat.version=0.8
 slf4j-api.version=1.6.1
 slf4j-log4j12.version=1.6.1
 velocity.version=1.5
-zookeeper.version=3.4.3
+zookeeper.version=3.3.2
