--- a/conf/hive-default.xml.template
+++ b/conf/hive-default.xml.template
@@ -64,7 +64,7 @@
 
 <property>
   <name>hive.exec.scratchdir</name>
-  <value>/tmp/hive-${user.name}</value>
+  <value>/user/${user.name}/tmp/hive/</value>
   <description>Scratch space for Hive jobs</description>
 </property>
 
